attempt to fit the document in 10 pages

--- a/ICPP-19/communications.bib
+++ b/ICPP-19/communications.bib
@@ -248,6 +248,7 @@ month={Aug},}
 @phdthesis{predari:tel-01518956,
   TITLE = {{Load Balancing for Parallel Coupled Simulations}},
   AUTHOR = {Predari, Maria},
+  URL = {https://hal.inria.fr/tel-01518956},
   SCHOOL = {{Universit{\'e} de Bordeaux, LaBRI ; Inria Bordeaux Sud-Ouest}},
   YEAR = {2016},
   MONTH = Dec,
